manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-spring-boot-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: springboot-app.cepg-82270864-sa.kubepia.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-spring-boot-service
            port:
              number: 80
