manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: springboot-app-ingress  # Ingress 이름 수정
  namespace: argocd
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: springboot-app.ce-82270864-sa.kubepia.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: springboot-app
                port:
                  number: 80
